--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,7 @@
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.VIBRATE" />
+    <uses-permission android:name="android.permission.USE_FULL_SCREEN_INTENT" />
 
     <application
         android:name=".SmartCalendarApplication"
@@ -47,6 +48,15 @@
             android:exported="false"
             android:theme="@style/Theme.SmartCalendar"
             android:windowSoftInputMode="adjustResize" />
+
+        <!-- Alarm Activity -->
+        <activity
+            android:name=".data.notification.AlarmActivity"
+            android:exported="false"
+            android:showOnLockScreen="true"
+            android:turnScreenOn="true"
+            android:theme="@style/Theme.MaterialComponents.NoActionBar"
+            android:launchMode="singleInstance" />
 
         <!-- Reminder Receiver -->
         <receiver
